wired up integration tests

--- a/api/api.csproj
+++ b/api/api.csproj
@@ -7,10 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 	<ItemGroup>
 		<InternalVisibleTo Include="Api.Spec" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\domain\domain.csproj" />
+	  <ProjectReference Include="..\infrastructure\infrastructure.csproj" />
 	</ItemGroup>
 
 </Project>
