refactored to application service

--- a/api/api.csproj
+++ b/api/api.csproj
@@ -17,6 +17,7 @@
 		<InternalVisibleTo Include="Api.Spec" />
 	</ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\app-services\app-services.csproj" />
 	  <ProjectReference Include="..\domain\domain.csproj" />
 	  <ProjectReference Include="..\infrastructure\infrastructure.csproj" />
 	</ItemGroup>
