added test database infrastructure to api-spec

--- a/api/appsettings.IntegrationTesting.json
+++ b/api/appsettings.IntegrationTesting.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Server=SUGA;Database=ForumDemo;Integrated Security=true;"
+    "SqlServer": "Server=SUGA;Database=ForumDemoTest;Integrated Security=true;"
   }
 }
